--- a/qdrant-landing/themes/qdrant/layouts/blog/single.html
+++ b/qdrant-landing/themes/qdrant/layouts/blog/single.html
@@ -94,7 +94,7 @@
         {{ if .Params.external_link }}
         {{ $link = .Params.external_link }}
         {{ end }}
-        <a href="{{ $link }}" class="qb-card col-12 col-md-4">
+        <a href="{{ $link }}" class="qb-card qb-card_mobile-compact col-12 col-md-4">
             {{ if .Params.preview_image }}
             <div class="qb-card__img">
                 <img src="{{ .Params.preview_image | safeHTML }}" alt="{{ .Params.title }}" class="img-fluid">
@@ -108,7 +108,7 @@
                 <span>{{ .Date | time.Format ":date_long" }}</span>
             </div>
         </a>
-        <a href="{{ $link }}" class="qb-card col-12 col-md-4">
+        <a href="{{ $link }}" class="qb-card qb-card_mobile-compact col-12 col-md-4">
             {{ if .Params.preview_image }}
             <div class="qb-card__img">
                 <img src="{{ .Params.preview_image | safeHTML }}" alt="{{ .Params.title }}" class="img-fluid">
@@ -122,7 +122,7 @@
                 <span>{{ .Date | time.Format ":date_long" }}</span>
             </div>
         </a>
-        <a href="{{ $link }}" class="qb-card col-12 col-md-4">
+        <a href="{{ $link }}" class="qb-card qb-card_mobile-compact col-12 col-md-4">
             {{ if .Params.preview_image }}
             <div class="qb-card__img">
                 <img src="{{ .Params.preview_image | safeHTML }}" alt="{{ .Params.title }}" class="img-fluid">
