--- a/qdrant-landing/themes/qdrant/static/css/blocks/_qdrant-blog.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_qdrant-blog.scss
@@ -82,6 +82,10 @@ $blog-text-color: var.$blog-text-color;
 
     & .breadcrumbs {
       margin-bottom: 3rem;
+
+      @include media-breakpoint-up(md) {
+        margin-bottom: 5rem;
+      }
     }
 
     & .qb-related__title {
@@ -251,7 +255,7 @@ $blog-text-color: var.$blog-text-color;
   padding-bottom: 2.33rem;
 
   @include media-breakpoint-up(md) {
-    padding-bottom: 10rem;
+    padding-bottom: 8.3rem;
   }
 
   &__title {
@@ -285,8 +289,11 @@ $blog-text-color: var.$blog-text-color;
     justify-content: center;
     margin-bottom: 2.5rem;
     color: var(--neutral-n-600, #39508F);
-
     @include mixins.blog-font-styles(0.875rem, 400, 1.3125rem, $blog-text-color);
+
+    @include media-breakpoint-up(md) {
+      font-size: 1rem;
+    }
   }
 
   &__meta-divider {
@@ -365,6 +372,10 @@ $blog-text-color: var.$blog-text-color;
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
 
+  @include media-breakpoint-up(md) {
+    padding-bottom: 1.63rem;
+  }
+
   &__title-outer {
     display: flex;
     flex-direction: column;
@@ -374,7 +385,7 @@ $blog-text-color: var.$blog-text-color;
       flex-direction: row;
       align-items: center;
       justify-content: space-between;
-      margin-bottom: 3rem;
+      margin-bottom: 2.5rem;
     }
   }
 
@@ -382,6 +393,11 @@ $blog-text-color: var.$blog-text-color;
     color: var(--neutral-n-800, #102252);
 
     @include mixins.blog-font-styles(2rem, 700, 2.5rem, $blog-text-color);
+
+    @include media-breakpoint-up(md) {
+      font-size: 2.5rem;
+      line-height: 3rem;
+    }
   }
 
   &__link {
@@ -390,6 +406,10 @@ $blog-text-color: var.$blog-text-color;
     color: var(--neutral-n-700, #1F3266);
 
     @include mixins.blog-font-styles(1rem, 600, 1.5rem, $blog-text-color);
+
+    @include media-breakpoint-up(md) {
+      padding-top: 7px;
+    }
 
     & > i {
       display: flex;
