--- a/qdrant-landing/themes/qdrant/static/css/blocks/_qdrant-blog.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_qdrant-blog.scss
@@ -50,6 +50,19 @@ $blog-text-color: var.$blog-text-color;
 
       &::placeholder {
         color: var(--neutral-n-300, #8B9CCC);
+      }
+
+      &:focus {
+        border: 1px solid var(--neutral-n-600);
+
+        &::placeholder {
+          color: var(--neutral-n-200);
+        }
+      }
+
+
+      &::placeholder {
+        color: var(--neutral-n-300, #8B9CCC);
         @include mixins.blog-font-styles(1rem, 400, 1.5rem, $blog-text-color);
       }
     }
@@ -415,6 +428,10 @@ $blog-text-color: var.$blog-text-color;
 
     @include media-breakpoint-up(md) {
       padding-top: 7px;
+    }
+
+    &:hover {
+      text-decoration: underline;
     }
 
     & > i {
