--- a/qdrant-landing/themes/qdrant/layouts/partials/contact-section.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/contact-section.html
@@ -16,7 +16,7 @@
             <input type="text" name="{{ .Site.Params.mailchimp_subscribe_id }}" tabindex="-1"
                    value="">
         </div>
-        <button type="submit">Subscribe</button>
+        <button type="submit"><span class="text">Subscribe</span></button>
     </form>
 </section>
 
@@ -42,7 +42,7 @@
                         <input type="text" name="{{ .Site.Params.mailchimp_subscribe_id }}" tabindex="-1"
                                value="">
                     </div>
-                    <button type="submit">Subscribe</button>
+                    <button type="submit"><span class="text">Subscribe</span></button>
                 </form>
             </div>
         </div>
