--- a/qdrant-landing/themes/qdrant/static/css/blocks/forms/_newsletter-form.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/forms/_newsletter-form.scss
@@ -1,58 +1,6 @@
 @use '../../variables' as var;
 @use '../../mixins/mixins' as mixins;
 
-$blog-font-family: var.$blog-font-family;
-$blog-text-color: var.$blog-text-color;
-
-.input-base {
-  width: 100%;
-  height: 3rem;
-  padding: 0.625rem 4rem 0.625rem 1.5rem;
-  margin-bottom: 0.5rem;
-  border-radius: 6.25rem;
-  @include mixins.blog-font-styles(1rem, 400, 1.5rem, $blog-font-family);
-
-  @include media-breakpoint-up(md) {
-    margin-right: 1.5rem;
-  }
-
-  &::placeholder {
-    color: var(--neutral-n-300, #8B9CCC);
-  }
-
-  &:focus {
-    border: 1px solid var(--neutral-n-600);
-
-    &::placeholder {
-      color: var(--neutral-n-200);
-    }
-  }
-}
-
-.form-button-base {
-  width: 100%;
-  height: 3rem;
-  padding: 0 1.5rem;
-  border-radius: 6.25rem;
-  background: var(--brand-primary, #DC244C);
-  color: var(--neutral-white, #FFF);
-  @include mixins.blog-font-styles(1rem, 500, 3rem, var(--neutral-white, #FFF));
-
-  @include media-breakpoint-up(md) {
-    width: 12.7rem;
-    line-height: 1.5rem; /* 150% */
-  }
-}
-
-.form-title-base {
-  display: inline-block;
-  @include mixins.blog-font-styles(1rem, 600, 1.5rem, $blog-text-color);
-  @include media-breakpoint-up(md) {
-    font-size: 1.125rem;
-    line-height: 1.6875rem;
-  }
-}
-
 .newsletter-form {
   &_default {
     margin-bottom: 35px;
@@ -148,7 +96,7 @@ $blog-text-color: var.$blog-text-color;
     &__title {
       display: inline-block;
       margin-bottom: 1.5rem;
-      @include mixins.blog-font-styles(2rem, 700, 2.5rem, $blog-text-color);
+      @include mixins.blog-font-styles(2rem, 700, 2.5rem, var.$blog-text-color);
 
       @include media-breakpoint-up(md) {
         font-size: 2.5rem;
