--- a/qdrant-landing/themes/qdrant/static/css/blocks/_pagination.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_pagination.scss
@@ -28,6 +28,7 @@
       font-style: normal;
       font-weight: 400;
       line-height: 1.5rem;
+      transition: background-color 0.2s ease;
 
       &:hover {
         background: var(--neutral-n-100, #F5F7FF);
