--- a/qdrant-landing/themes/qdrant/layouts/partials/js.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/js.html
@@ -61,7 +61,7 @@
       window.initQdrantSearch({searchApiUrl: 'https://search.qdrant.tech/api/search', section: "documentation"});
     }
 
-    if (/blog/.test(window.location?.pathname)) {
+    if (/blog\/?$/.test(window.location?.pathname)) {
       window.initQdrantSearch({searchApiUrl: 'https://search.qdrant.tech/api/search', section: "articles"}); <!-- todo: change to "blog" -->
     }
   });
