fix compact view of card

--- a/qdrant-landing/themes/qdrant/layouts/blog/single.html
+++ b/qdrant-landing/themes/qdrant/layouts/blog/single.html
@@ -100,7 +100,7 @@
         <a href="{{ $link }}" class="qb-card qb-card_mobile-compact col-12 col-md-4">
             {{ if .Params.preview_image }}
             <div class="qb-card__img">
-                <img src="{{ .Params.preview_image | safeHTML }}" alt="{{ .Params.title }}" class="img-fluid">
+                <img src="{{ .Params.preview_image | safeHTML }}" alt="{{ .Params.title }}">
             </div>
             {{ end }}
             <h3 class="qb-card__title">{{ .Params.title }}</h3>
@@ -114,7 +114,7 @@
         <a href="{{ $link }}" class="qb-card qb-card_mobile-compact col-12 col-md-4">
             {{ if .Params.preview_image }}
             <div class="qb-card__img">
-                <img src="{{ .Params.preview_image | safeHTML }}" alt="{{ .Params.title }}" class="img-fluid">
+                <img src="{{ .Params.preview_image | safeHTML }}" alt="{{ .Params.title }}">
             </div>
             {{ end }}
             <h3 class="qb-card__title">{{ .Params.title }}</h3>
@@ -128,7 +128,7 @@
         <a href="{{ $link }}" class="qb-card qb-card_mobile-compact col-12 col-md-4">
             {{ if .Params.preview_image }}
             <div class="qb-card__img">
-                <img src="{{ .Params.preview_image | safeHTML }}" alt="{{ .Params.title }}" class="img-fluid">
+                <img src="{{ .Params.preview_image | safeHTML }}" alt="{{ .Params.title }}">
             </div>
             {{ end }}
             <h3 class="qb-card__title">{{ .Params.title }}</h3>
