--- a/qdrant-landing/themes/qdrant/static/css/blocks/_qdrant-blog.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_qdrant-blog.scss
@@ -248,8 +248,12 @@ $blog-text-color: var.$blog-text-color;
         overflow: hidden;
         margin-bottom: 0;
         & > img {
+          flex-shrink: 0;
           width: auto;
-          height: 100%;
+          min-width: 100%;
+          min-height: 100%;
+          max-width: none;
+          max-height: 100%;
         }
       }
       .qb-card__title {
@@ -444,6 +448,6 @@ $blog-text-color: var.$blog-text-color;
 
 @keyframes shimmer {
   to {
-    background-position-x: 0%;
+    background-position-x: 0;
   }
 }
