--- a/qdrant-landing/themes/qdrant/static/css/blocks/_qdrant-blog.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_qdrant-blog.scss
@@ -4,6 +4,18 @@
 $blog-font-family: var.$blog-font-family;
 $blog-text-color: var.$blog-text-color;
 
+.full-height-img {
+  display: flex;
+  & > img {
+    flex-shrink: 0;
+    width: auto;
+    min-width: 100%;
+    min-height: 100%;
+    max-width: none;
+    max-height: 100%;
+  }
+}
+
 .qdrant-blog {
   font-family: $blog-font-family;
 
@@ -143,9 +155,13 @@ $blog-text-color: var.$blog-text-color;
   }
 
   &__img {
+    display: flex;
+    height: 12.3rem;
     margin-bottom: 1.58rem;
-    max-height: 12.3rem;
     position: relative;
+    overflow: hidden;
+    align-items: center;
+    justify-content: center;
 
     img {
       width: 100%;
@@ -194,11 +210,12 @@ $blog-text-color: var.$blog-text-color;
       bottom: 0;
       left: 0;
       right: 0;
-      background: linear-gradient(-60deg, var(--neutral-n-50) 40%, transparent 50%, var(--neutral-n-50) 60%);
+      background: linear-gradient(-60deg, transparent 30%, var(--neutral-n-50) 50%, transparent 70%, var(--neutral-n-50) 80%);
       background-size: 300%;
       background-position-x: 100%;
-      animation: shimmer 1.6s infinite linear;
-      opacity: 0.15;
+      animation: shimmer 0.6s linear;
+      animation-iteration-count: 1;
+      opacity: 0.3;
     }
   }
 
@@ -217,6 +234,7 @@ $blog-text-color: var.$blog-text-color;
       overflow: hidden;
 
       @include media-breakpoint-up(md) {
+        height: auto;
         max-height: 19.125rem;
       }
     }
@@ -238,23 +256,8 @@ $blog-text-color: var.$blog-text-color;
         display: none;
       }
       .qb-card__img {
-        display: flex;
-        align-items: center;
-        justify-content: center;
         margin-right: 1.25rem;
-        max-width: 6.25rem;
-        min-width: 6.25rem;
-        height: 5rem;
-        overflow: hidden;
-        margin-bottom: 0;
-        & > img {
-          flex-shrink: 0;
-          width: auto;
-          min-width: 100%;
-          min-height: 100%;
-          max-width: none;
-          max-height: 100%;
-        }
+        @include mixins.fixed-height-img(5rem, 6.25rem);
       }
       .qb-card__title {
         @include mixins.blog-font-styles(1.125rem, 600, 1.6875rem, $blog-text-color);
@@ -447,6 +450,9 @@ $blog-text-color: var.$blog-text-color;
 }
 
 @keyframes shimmer {
+  from {
+    background-position-x: 100%;
+  }
   to {
     background-position-x: 0;
   }
