--- a/qdrant-landing/themes/qdrant/static/css/blocks/_qdrant-blog.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_qdrant-blog.scss
@@ -224,25 +224,27 @@ $blog-text-color: var.$blog-text-color;
     margin: 0 0.38rem;
   }
 
-  &:hover {
-    .qb-card__title {
-      color: var(--brand-primary, #DC244C);
-    }
+  @media (hover: hover) {
+    &:hover {
+      .qb-card__title {
+        color: var(--brand-primary, #DC244C);
+      }
 
-    .qb-card__img:after {
-      content: "";
-      display: none;
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      background: linear-gradient(-60deg, transparent 30%, var(--neutral-n-50) 50%, transparent 70%, var(--neutral-n-50) 80%);
-      background-size: 300%;
-      background-position-x: 100%;
-      animation: shimmer 0.6s linear;
-      animation-iteration-count: 1;
-      opacity: 0.3;
+      .qb-card__img:after {
+        content: "";
+        display: none;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background: linear-gradient(-60deg, transparent 30%, var(--neutral-n-50) 50%, transparent 70%, var(--neutral-n-50) 80%);
+        background-size: 300%;
+        background-position-x: 100%;
+        animation: shimmer 0.6s linear;
+        animation-iteration-count: 1;
+        opacity: 0.3;
+      }
     }
   }
 
