New blog section (#477)
* new blog layout WIP

* contact form - compact variant, some hero section styles

* pagination style

* post fetching WIP

* two cols form

* blog post

* blog post related posts styles

* some refactoring

* forms fixes

* hero section

* breadcrumbs

* fix

* fixes for featured section

* fixes

* blog single page

* single page related posts - mobile view

* single page

* html, share links hover

* input focus styles

* some hovers

* added page-serch

* fixes

* fix compact view of card

* form ids

* related posts, mobile list, css fixes

* blog post archetype

* posts

* turned off cards img animation

* netlify cms update

* removed excessive padding

* readme

* font 500 for news letter form

--- a/qdrant-landing/themes/qdrant/static/css/_colors.scss
+++ b/qdrant-landing/themes/qdrant/static/css/_colors.scss
@@ -7,4 +7,14 @@
   --brand-light-grey: #EBF1FF;
   --brand-light: #F4F6FF;
 
+  --neutral-n-50: #F2F6FF;
+  --neutral-n-100: #DCE4FA;
+  --neutral-n-200: #AEBDE5;
+  --neutral-n-300: #8B9CCC;
+  --neutral-n-400: #6A80BD;
+  --neutral-n-500: #5069AD;
+  --neutral-n-600: #39508F;
+  --neutral-n-700: #1F3266;
+  --neutral-n-800: #102252;
+  --neutral-n-900: #06153D;
 }
