--- a/qdrant-landing/themes/qdrant/layouts/blog/baseof.html
+++ b/qdrant-landing/themes/qdrant/layouts/blog/baseof.html
@@ -1,10 +1,10 @@
 {{- partial "header.html" . -}}
 
-{{- partial "second_header.html" . -}}
-
-<div id="content">
+<div id="content" class="qdrant-blog">
     {{ block "main" . }}{{ end }}
 </div>
 
+{{ .Scratch.Set "variant" "two-columns" }}
 {{ partial "contact-section" . }}
+
 {{- partial "footer.html" . -}}
