--- a/qdrant-landing/themes/qdrant/static/css/_variables.scss
+++ b/qdrant-landing/themes/qdrant/static/css/_variables.scss
@@ -1,2 +1,5 @@
 $font-family-non-content: 'SF Pro', 'Roboto', sans-serif;
 $font-family-content: 'Open Sans', sans-serif;
+
+$blog-font-family: 'Roboto', sans-serif;
+$blog-text-color: var(--neutral-n-800, #102252);
